--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,9 @@
     </div>
     <hr />
     <div id="body">
+      <div id="contents">
       {{ content }}
+      </div>
       <hr />
       <div class="extension e1">
         <div class="section">
