--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,15 +3,12 @@ layout: default
 ---
 
 <article class="post">
-  <h1>{{ page.title }}</h1>
-
-  <div class="entry">
-    {{ content }}
-  </div>
-
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
-
+	<h2 class="postTitle">{{ page.title }}</h2>
+	<div class="bx_meta">
+	  <p class="postMeta">Written on {{ page.date | date: "%B %e, %Y" }}</p>
+	</div>
+	<div class="se_contents">
+	   {{ post.excerpt }}
+	</div>
   {% include disqus.html %}
 </article>
