--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,9 +45,8 @@
       </div>
       <hr />
       <ul class="globalMenu">
-        <li><a title="프로필" href="">Profile</a></li>
-        <li><a title="블로그" href="">Blog</a></li>
-        <li><a title="사진" href="">Photo</a></li>
+        <li><a title="프로필" href="/about">Profile</a></li>
+        <li><a title="블로그" href="/blog">Blog</a></li>
       </ul>
     </div>
     <hr />
@@ -66,7 +65,7 @@
     <div id="footer">
     </div>
     <div id="bottomMenu">
-      <p class="copyright">Copyright 2009-$!{date.getYear()} Simplicity. All right reserved. All logos used on this page are the property of their respective trademark owners.</p>
+      <p class="copyright">Copyright 2009-2016 Simplicity. All right reserved. All logos used on this page are the property of their respective trademark owners.</p>
     </div>
   </div>
 </div>
