many changes commitee

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
     <div id="footer">
     </div>
     <div id="bottomMenu">
-      {% include svg-icons.html %}
+      <p style="text-align: right;">{% include svg-icons.html %}</p>
       <p class="copyright">Copyright 2009-2016 Simplicity. All right reserved. All logos used on this page are the property of their respective trademark owners.</p>
     </div>
   </div>
