--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,10 +3,11 @@ layout: default
 ---
 
 <article class="page">
-
-  <h1>{{ page.title }}</h1>
-
-  <div class="entry">
-    {{ content }}
+  <h2 class="postTitle">{{ page.title }}</h2>
+  <div class="bx_meta">
+    <p class="postMeta">Written on {{ page.date | date: "%B %e, %Y" }}</p>
+  </div>
+  <div class="se_contents">
+  {{ content }}
   </div>
 </article>
