--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,8 @@ layout: default
   <div class="bx_meta">
     <p class="postMeta">Written on {{ page.date | date: "%B %e, %Y" }}</p>
   </div>
+  <div class="se_contents">
   {{ content }}
+  </div>
   {% include disqus.html %}
 </article>
