--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,9 @@
       <span class="second_logo"></span>
       <div class="extension">
         <ul>
-          <li><a title="방명록" class="guestbook" href=""><span>방명록</span></a></li>
-          <li class="tags"><a title="태그" class="tags" href=""><span>태그</span></a></li>
-          <li class="profile"><a title="프로필" class="profile" href=""><span>프로필</span></a></li>
+          <li><a title="방명록" class="guestbook" href="#"><span>방명록</span></a></li>
+          <li class="tags"><a title="태그" class="tags" href="{{ site.baseurl }}/tags"><span>태그</span></a></li>
+          <li class="profile"><a title="프로필" class="profile" href="{{ site.baseurl }}/about"><span>프로필</span></a></li>
         </ul>
       </div>
       <hr />
