push register added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,8 @@
                 enable: true /* Set to false to hide */
             }
           }]);
+
+          OneSignal.push(["registerForPushNotifications", {modalPrompt: true}]);
         });
     </script>
 </head>
