--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,14 +24,12 @@
           var OneSignal = OneSignal || [];
           OneSignal.push(["init", {
             appId: "ce678d29-3ca2-4938-ba19-14bf4dd2fa08",
-            autoRegister: false, /* Set to true to automatically prompt visitors */
+            autoRegister: true, /* Set to true to automatically prompt visitors */
             subdomainName: 'akirose.github.io',   
             notifyButton: {
                 enable: true /* Set to false to hide */
             }
           }]);
-
-          OneSignal.push(["registerForPushNotifications", {modalPrompt: true}]);
         });
     </script>
 </head>
