--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,6 +82,33 @@
     <div id="bottomMenu">
       <p class="copyright">Copyright 2009-2016 Simplicity. All right reserved. All logos used on this page are the property of their respective trademark owners.</p>
       <p style="text-align: right;">{% include svg-icons.html %}</p>
+
+    <a href="#" id="subscribe-link" style="display: none;">Subscribe to Notifications</a>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async="async"></script>
+    <script>
+        function subscribe() {
+            OneSignal.push(["registerForPushNotifications"]);
+            event.preventDefault();
+        }
+
+        var OneSignal = OneSignal || [];
+        /* This example assumes you've already initialized OneSignal */
+        OneSignal.push(function() {
+            // If we're on an unsupported browser, do nothing
+            if (!OneSignal.isPushNotificationsSupported()) {
+                return;
+            }
+            OneSignal.isPushNotificationsEnabled(function(isEnabled) {
+                if (isEnabled) {
+                    // The user is subscribed to notifications
+                    // Don't show anything
+                } else {
+                    document.getElementById("subscribe-link").addEventListener('click', subscribe);
+                    document.getElementById("subscribe-link").style.display = '';
+                }
+            });
+        });
+    </script>      
     </div>
   </div>
 </div>
