--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
   <script type="text/javascript" src="{{ site.baseurl }}/jquery-simplicity.js"></script>
   <script type="text/javascript">
     /* loading screen */
-      $(window).ready(function() {
+      $(window).load(function() {
         $("div#overlay").fadeOut(300);
         $("#se").fadeIn(600);
 
