--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
         var OneSignal = OneSignal || [];
         OneSignal.push(["init", {
           appId: "b2c2f6ab-1b0b-4119-a23f-67f2cc67a905",
-          subdomainName: 'akirose.onesignal.com',
+          subdomainName: 'https://akirose.onesignal.com',
           autoRegister: true, /* Set to true to automatically prompt visitors */
           notifyButton: {
               enable: true /* Set to false to hide */
