--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
                   enable: true /* Set to false to hide */
               }
             }]);
-            OnseSignal.push(["sendTag", "from", "blog"]);
+            OneSignal.push(["sendTag", "from", "blog"]);
         </script>    
       </div>
       <hr />
