--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="page">
-  <h2 class="postTitle">{{ page.title }}</h2>
+<div class="page">
+  <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
-</article>
+</div>
