--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,10 @@
   </title>
 
   <!-- CSS -->
+  <link rel="manifest" href="/manifest.json">
+
+  <link rel="stylesheet" media="screen" type="text/css" href="style.css" />
+
   <link rel="stylesheet" href="/public/css/poole.css">
   <link rel="stylesheet" href="/public/css/syntax.css">
   <link rel="stylesheet" href="/public/css/lanyon.css">
