--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,8 +33,6 @@
   </nav>
 
   <div class="sidebar-item">
-    <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
-    </p>
+      <p style="text-align: right;">{% include svg-icons.html %}</p>
   </div>
 </div>
