--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,6 +33,6 @@
   </nav>
 
   <div class="sidebar-item">
-      <p style="text-align: right;">{% include svg-icons.html %}</p>
+      <p>{% include svg-icons.html %}</p>
   </div>
 </div>
