--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
   <!-- CSS -->
   <link rel="manifest" href="/manifest.json">
 
-  <link rel="stylesheet" media="screen" type="text/css" href="style.css" />
+  <link rel="stylesheet" media="screen" type="text/css" href="{{ site.baseurl }}/style.css" />
 
   <link rel="stylesheet" href="/public/css/poole.css">
   <link rel="stylesheet" href="/public/css/syntax.css">
