--- a/style.scss
+++ b/style.scss
@@ -1,1 +1,11 @@
+---
+---
+
+//
+// IMPORTS
+//
+
 @import "svg-icons";
+
+.bx_meta { padding: 0px; margin: 0px 0px 10px; }
+.postMeta { padding: 6px 9px 4px 9px; display: inline; background: #929ea4; color: #ffffff; font-size: 11px; }
