--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     {% if page.title == "Home" %}
       {{ site.name }} &middot; {{ site.description }}
     {% else %}
-      {{ page.title }} &middot; {{ site.title }}
+      {{ page.title }} &middot; {{ site.name }}
     {% endif %}
   </title>
 
