--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,4 +32,5 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
   <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async='async'></script>
+  <script type="text/javascript" name="baidu-tc-cerfication" data-appid="2175756" src="http://apps.bdimg.com/cloudaapi/lightapp.js"></script>
 </head>
