--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,9 @@ layout: default
 {% if page.comments %}
 <div id="disqus_thread"></div>
 <script>
+var disqus_config=function() {
+  this.page.identifier = "{{ page.url }}";
+}
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
 s.src = '//akirose.disqus.com/embed.js';
