--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,8 @@
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-
+  <meta name="naver-site-verification" content="dece63166751a736d87a2c34f139747cd116fb88"/>
+  
   <title>
     {% if page.title == "Home" %}
       {{ site.name }} &middot; {{ site.description }}
