--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,7 +33,7 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
   <link rel="manifest" href="/manifest.json">
-  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
+  <!-- script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
   <script>
     var OneSignal = window.OneSignal || [];
     OneSignal.push(["init", {
@@ -43,5 +43,17 @@
         enable: true
       }
     }]);
+  </script-->
+  <script type="text/javascript">
+    if('serviceWorker' in navigator && 'PushManager' in window) {
+      navigator.serviceWorker.register('./sw.js', {scope:'./'});
+      navigator.serviceWorker.ready.then(function(serviceWorkerRegistration) {
+        console.log("sw.js registered.");
+        serviceWorkerRegistration.pushManager.subscribe({userVisibleOnly: true})
+        .then(function(subscription) {
+          console.log("RegistrationId is ", subscription.subscriptionId);
+        });
+      });
+    }
   </script>
 </head>
