--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,6 +51,7 @@
         console.log("sw.js registered.");
         serviceWorkerRegistration.pushManager.subscribe({userVisibleOnly: true})
         .then(function(subscription) {
+          console.log(subscription);
           console.log("RegistrationId is ", subscription.subscriptionId);
         });
       });
