--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,6 +52,7 @@
         serviceWorkerRegistration.pushManager.subscribe({userVisibleOnly: true})
         .then(function(subscription) {
           console.log(JSON.stringify(subscription));
+          console.log(subscription);
           if('supportedContentEncodings' in PushManager) { 
             contentEncoding = PushManager.supportedContentEncodings.includes('aes128gcm') ? 'aes128gcm' : 'aesgcm' ; 
           } else {
