--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,7 +48,8 @@
     if('serviceWorker' in navigator && 'PushManager' in window) {
       navigator.serviceWorker.register('./sw.js', {scope:'./'});
       navigator.serviceWorker.ready.then(function(serviceWorkerRegistration) {
-        serviceWorkerRegistration.pushManager.subscribe({userVisibleOnly:true, applicationServerKey:"BJf82Fb8T4CZiSjYb_PsoSJU5HfjX09U53o7GJdf_RJGmDh27sZbcb4fWbKosgjMi5z3vHWnbxHF9CNNzjJ7y1c"}).then(function(subscription) {
+        serviceWorkerRegistration.pushManager.subscribe({userVisibleOnly:true, applicationServerKey:"BGBHt90FWmtQxqDmfG8yfLLvZ1iq3xOsG8lWjA5ckoD8F-hyvLrni4YLWxwWPkihFtLUkGqOx0kEgk9dUKt3NGA"})
+        .then(function(subscription) {
           console.log(JSON.stringify(subscription));
         });
       });
