--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,7 +33,7 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
   <link rel="manifest" href="/manifest.json">
-  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
+  <!-- script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
   <script>
     var OneSignal = window.OneSignal || [];
     OneSignal.push(["init", {
@@ -43,10 +43,26 @@
         enable: true
       }
     }]);
-  </script>
-  <!--script type="text/javascript" src="/MPushSDK.js"></script>
-  <script type="text/javascript">
-    var MPush = window.M || [];
-    MPush.register("BGBHt90FWmtQxqDmfG8yfLLvZ1iq3xOsG8lWjA5ckoD8F-hyvLrni4YLWxwWPkihFtLUkGqOx0kEgk9dUKt3NGA");
   </script-->
+  <script type="text/javascript" src="/MPushSDK.js"></script>
+  <script type="text/javascript">
+    function guid() {
+      function s4() {
+        return ((1 + Math.random()) * 0x10000 | 0).toString(16).substring(1);
+      }
+      return s4() + s4() + '-' + s4() + '-' + s4() + '-' + s4() + '-' + s4() + s4() + s4();
+    }
+
+    M.push("com.uracle.push.demo", "http://211.241.199.195:8080", "BGBHt90FWmtQxqDmfG8yfLLvZ1iq3xOsG8lWjA5ckoD8F-hyvLrni4YLWxwWPkihFtLUkGqOx0kEgk9dUKt3NGA", {
+      title: "Simplicity",
+      url: "https://akirose.github.io",
+      icon: "https://akirose.github.io/public/favicon.ico"
+    });
+
+    M.register(guid()).then(function(){
+      console.log("PUSH Notification Subscribe successfully.")
+    }).catch(function(e) {
+      console.log(e);
+    });
+  </script>
 </head>
