--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,7 +33,7 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
   <link rel="manifest" href="/manifest.json">
-  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
+  <!-- script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
   <script>
     var OneSignal = window.OneSignal || [];
     OneSignal.push(["init", {
@@ -43,7 +43,7 @@
         enable: true
       }
     }]);
-  </script>
+  </script -->
   <script type="text/javascript" src="/MPushSDK.js"></script>
   <script type="text/javascript">
     function guid() {
@@ -53,11 +53,13 @@
       return s4() + s4() + '-' + s4() + '-' + s4() + '-' + s4() + '-' + s4() + s4() + s4();
     }
 
-    M.push("com.uracle.push.demo", "http://211.241.199.195:8080", "BGBHt90FWmtQxqDmfG8yfLLvZ1iq3xOsG8lWjA5ckoD8F-hyvLrni4YLWxwWPkihFtLUkGqOx0kEgk9dUKt3NGA", {
+    M.push("com.uracle.push.demo", "https://websocket.morpheus.kr", "BGBHt90FWmtQxqDmfG8yfLLvZ1iq3xOsG8lWjA5ckoD8F-hyvLrni4YLWxwWPkihFtLUkGqOx0kEgk9dUKt3NGA", {
       title: "Simplicity",
       url: "https://akirose.github.io",
       icon: "https://akirose.github.io/public/favicon.ico"
     });
+
+    //M.addgroup("WPUserGroup").then(function(response){ console.log(response); });
 
     M.register(guid()).then(function(){
       console.log("PUSH Notification Subscribe successfully.")
